# single-mode-shortcuts

./: Cargo.toml
src/: gui.rs  keymap.rs  keymap_entry.rs  main.rs  types.rs
src/keymap/: linux.rs  macos.rs  mod.rs  windows.rs
