[package]
name = "single-mode-shortcuts"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"
iced = "0.7.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
clap = { version = "4.1.4", features = ["derive"] }
itertools = "0.10.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"
